samples/_failures_safe/1761448500_7d5f69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b682e43e.c: In function ‘main’:
./samples/SAFE/__tmp_b682e43e.c:182:5: error: expected expression at end of input
  182 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_b682e43e.c:182:5: error: expected declaration or statement at end of input
